<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.cucumber.test</groupId>
  <artifactId>test</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>test</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>repo.bodar.com</id>
      <url>http://repo.bodar.com</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-java</artifactId>
      <version>1.2.5</version>
    </dependency>
    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-junit</artifactId>
      <version>1.2.5</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>2.52.0</version>
    </dependency>

    <!-- REPORTING -->
    <!--<dependency>-->
      <!--<groupId>com.googlecode.totallylazy</groupId>-->
      <!--<artifactId>totallylazy</artifactId>-->
      <!--<version>1.85</version>-->
      <!--<scope>system</scope>-->
      <!--<systemPath>${project.basedir}/lib/totallylazy-1.20.jar</systemPath>-->
    <!--</dependency>-->

    <!--<dependency>-->
      <!--<groupId>net.masterthought</groupId>-->
      <!--<artifactId>cucumber-reporting</artifactId>-->
      <!--<version>3.1.0</version>-->
    <!--</dependency>-->
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.19</version>
        <configuration>
          <argLine>-Duser.language=en</argLine>
          <argLine>-Xmx1024m</argLine>
          <argLine>-XX:MaxPermSize=256m</argLine>
          <argLine>-Dfile.encoding=UTF-8</argLine>
          <useFile>false</useFile>
          <!--<systemPropertyVariables>-->
          <!--<environment>${env.USER}</environment>-->
          <!--</systemPropertyVariables>-->
          <!-- Suite testng xml file to consider for test execution -->
          <!--<suiteXmlFiles>-->
            <!--<suiteXmlFile>testng.xml</suiteXmlFile>-->
          <!--</suiteXmlFiles>-->
        </configuration>
      </plugin>
      <!-- Compiler plugin configures the java version to be usedfor compiling
          the code -->
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
